--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
+    "jade": "~1.3.0",
     "formidable": "*",
-    "jade": "~1.3.0"
+    "aws-sdk": "*"
   }
 }
