--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "aws-sdk": "*",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0",
+    "express": "~4.2.0",
     "formidable": "*",
-    "aws-sdk": "*"
+    "jade": "~1.3.0",
+    "mongodb": "*",
+    "monk": "*",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   }
 }
